force-app/main/default/objects/Availability__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>