force-app/main/default/objects/Availability__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PractitionerAvailability</relationshipName>
    <type>Lookup</type>
</CustomField>