force-app/main/default/objects/Availability__c/fields/RuleId__c.field-meta.xml
<CustomField>
    <fullName>RuleId__c</fullName>
    <label>Slot Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>