force-app/main/default/objects/Availability__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>